Preliminary Event Page

--- a/src/app/event-page/event-page.component.css
+++ b/src/app/event-page/event-page.component.css
@@ -2,3 +2,72 @@ h1, h2, h3, h4{
   text-align: center;
   font-family:Calluna;
 }
+
+.card {
+    font-size: 1em;
+    overflow: hidden;
+    padding: 0;
+    border:1 solid #83868a;
+    border-radius: 0;
+    /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
+}
+
+.card-1 {
+  height:14.1em;
+}
+
+.event-title {
+  font-family:Lato-Medium;
+  font-size:26px;
+  margin-left:12%;
+}
+
+.event-club-subheading {
+  font-family:Lato-Semibold;
+  font-size:16px;
+  margin-left:12%;
+  color:#0083c1;
+}
+
+.datetime-location {
+  font-family:Lato-Semibold;
+  font-size:12px;
+  color:#83868a;
+  margin-left:12%
+}
+
+.event-banner {
+  width:100%;
+  height:auto;
+}
+
+.register-button {
+  background:#fcb518;
+  border:2px solid #fcb518;
+  border-radius:2px;
+  width:212px;
+  height:34px;
+  text-align: center;
+  margin-left:12%;
+}
+.register-text {
+  font-family:Lato-Regular;
+  font-size:18px;
+  color:#ffffff;
+  letter-spacing:0;
+  text-align:center;
+}
+.content-header {
+  font-family:Lato-Medium;
+  font-size:12px;
+  color:#000000;
+  letter-spacing:0;
+  text-align:left;
+}
+.content-datetime {
+  font-family:Lato-Medium;
+  font-size:15px;
+  color:#83868a;
+  letter-spacing:0;
+  text-align:left;
+}
