--- a/src/app/event-page/event-page.component.html
+++ b/src/app/event-page/event-page.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
-    <div class="col-sm-4 col-md-4 col-lg-4 mt-4 pr-1">
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-4 pr-1">
       <div class="card card-1">
-        <div class="card-block">
+        <div class="card-block card-1-block">
           <span class="event-title">{{event.title}}</span><br>
           <a class="event-club-subheading" routerLink="/clubs/{{club.id}}">{{club.name}}</a><br>
           <span class="datetime-location">{{event.start_date_time | getLongDate}}</span><br>
@@ -24,25 +24,41 @@
     </div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-sm-8 col-md-8 col-lg-8 mt-4 pr-1">
+    <div class="col-sm-9 col-md-9 col-lg-9 mt-2 pr-1">
       <div class="card">
         <div class="card-block">
           <div class="row">
-            <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="col-sm-4 col-md-4 col-lg-4 pr-3">
               <span class="content-header">DATE & TIME</span><br>
-              <span class="content-datetime">{{event.start_date_time | getLongDate}}</span>
+              <div *ngIf="!multiDay">
+                <span class="content-datetime">{{event.start_date_time | getLongDate}}</span>
+                <br>
+                <span class="content-datetime">{{event.start_date_time | getTime}} - {{event.end_date_time | getTime}}</span>
+                <br><br>
+              </div>
+
+              <span class="content-header">LOCATION</span><br>
+              <span class="content-datetime">{{event.location}}</span>
             </div>
             <div class="col-sm-8 col-md-8 col-lg-8">
-              Some things
+              <span class="content-header">DESCRIPTION</span><br>
+              <span class="content-datetime">{{event.event_description}}</span><br><br>
+              <span class="content-header" *ngIf="hasTags">TAGS</span>
+              <div class="d-flex flex-wrap justify-content-center">
+                <div class="tags-label m-1" *ngFor="let tag of event.event_tags">
+                  <span>{{tag.tag}}</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-4 mt-4 pl-1">
+    <div class="col-sm-2 col-md-2col-lg-2 mt-2 pl-1">
       <div class="card">
-        <div class="card-block">
-
+        <div class="card-block" style="text-align:center">
+          <span class="card-4-surprise">102</span><br>
+          <span class="surprise-subtext">People attending</span>
         </div>
       </div>
     </div>
