--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -23,7 +23,6 @@
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
   font-family: "Roboto", sans-serif;
@@ -40,7 +39,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #422c89;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -51,7 +50,7 @@
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #422c89;
 }
 .form .message {
   margin: 15px 0 0;
@@ -59,7 +58,7 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #422c89;
   text-decoration: none;
 }
 .form .register-form {
