--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -7,10 +7,10 @@ h2 {margin:1em 0;}
 
 
 .collapse-accordion .card a[data-toggle=collapse] {display: block;padding:.75rem 1.25rem;}
-.collapse-accordion .card-header {padding:0;}
+.collapse-accordion .card-header {padding:0;} 
 
 html {
-    font-family: Lato-Regular, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
 
@@ -25,7 +25,7 @@ h3 {
 	font-weight: 700;
 	font-size: 30px;
 	margin-bottom: 0;
-	font-family: Lato-Black, sans-serif;
+	font-family: Montserrat, sans-serif;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
@@ -33,24 +33,20 @@ h3 {
 
 h6 {
 	font-weight: 500;
-	font-size: 16px;
-	font-family: Lato-Regular, sans-serif;
+	font-size: 200%;
+	font-family: Montserrat, sans-serif;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
 	margin-bottom: 0;
-	margin-top: 30px;
+	margin-top: 60px; 
+	text-align: center;
 }
 
 .card {
 	border-left: 1px solid darkgrey;
 	border-right: 1px solid darkgrey;
 	border-radius: 0;
-}
-
-.title {
-  font-family:Lato-Black;
-  font-size:1.3em;
 }
 
 .content-header {
@@ -69,26 +65,14 @@ h6 {
 }
 
 .logo {
-	width: 75%;
-	height: auto;
-}
-
-.line-clamp-wrapper {
-	height: 57px;
- 	overflow: hidden;
-}
-
-.line-clamp {
-	width: 450px;
-	line-height: 15px;
-	overflow-wrap: break-word;
-	word-wrap: break-word;
+	width: 100%;
+	height: 100%;
 }
 
 .club-description {
 	font-weight: 300;
-	font-size: 13px;
-	font-family: Lato-Regular;
+	font-size: 12px;
+	font-family: Montserrat, sans-serif;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
@@ -96,13 +80,14 @@ h6 {
 
 .tags {
 	font-weight: 200;
-	font-size:1em;
-	font-family: Lato-Regular;
+	font-style: italic;
+	font-size:112%;
+	font-family: Montserrat, sans-serif;
 	color:#83868a;
 	letter-spacing:0;
 	margin: 0;
-	text-align:left;
 	letter-spacing:0;
+	text-align: center;
 }
 
 #bottom_margin_2 {
