Added description back, aligned text to left for clubs

--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -11,12 +11,12 @@
 		                <div class="col-sm-4 col-md-4 col-lg-4">
 		                    <img class="logo" src="../../assets/img/thumbnails/{{club.val.app_logo}}" alt="Club Logo">
 		              	</div>
-		                <div class="col-sm-8 col-md-8 col-lg-8 mt-5">
+		                <div class="col-sm-8 col-md-8 col-lg-8 mt-3">
 		                    <h6>{{club.val.name}}</h6>
-		                    <div class="tags" id="bottom_margin_2">
+		                    <div class="tags" id="bottom_margin_4">
 		                     	<span *ngFor="let tag of club.val.club_tags">{{tag.tag}} &bull; &nbsp;</span>
 		                    </div>
-	                      	<!-- <p class="club-description">{{club.val.description}}</p> -->
+	                      	<p class="club-description">{{club.val.description}}</p>
 	                	</div>
 	                </div>
 	            </div>
