--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -40,7 +40,7 @@ h6 {
 	text-align:left;
 	margin-bottom: 0;
 	margin-top: 60px; 
-	text-align: center;
+	text-align: left;
 }
 
 .card {
@@ -87,9 +87,9 @@ h6 {
 	letter-spacing:0;
 	margin: 0;
 	letter-spacing:0;
-	text-align: center;
+	text-align: left;
 }
 
-#bottom_margin_2 {
-	margin-bottom: 2px;
+#bottom_margin_4 {
+	margin-bottom: 4px;
 }
