--- a/src/app/sidebar/job-posting-sidebar.html
+++ b/src/app/sidebar/job-posting-sidebar.html
@@ -5,7 +5,7 @@
       <img src="assets/img/thumbnails/{{clubs[posting.club_id].app_logo}}" class="open-positions-icon mr-4">
       <div class="d-flex flex-column">
         <h2 style="font-family:Lato-Bold; font-size:16px;">{{posting.title}}</h2>
-        <span class="job-posting-subheader">Expires on 11/08/2017</span>
+        <span class="job-posting-subheader">Expires on</span>
       </div>
     </li>
   </ul>
