--- a/src/app/job-detail-page/job-detail-page.component.css
+++ b/src/app/job-detail-page/job-detail-page.component.css
@@ -4,11 +4,11 @@
 }
 
 .title-font {
-  font-family: Calluna-Bold;
+  font-family: Lato-Bold;
   font-size: 30px;
 }
 
 .job-detail {
-  font-family: Calluna;
+  font-family: Lato-Regular;
   font-size: 18px;
 }
