--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -44,8 +44,7 @@ h6 {
 }
 
 .card {
-	border-left: 1px solid darkgrey;
-	border-right: 1px solid darkgrey;
+  border: 1 solid #83868a;
 	border-radius: 0;
 }
 
@@ -96,15 +95,11 @@ h6 {
 }
 
 .tags {
-	font-weight: 200;
-	font-style: italic;
-	font-size:112%;
-	font-family: Montserrat, sans-serif;
-	color:#83868a;
-	letter-spacing:0;
-	margin: 0;
-	letter-spacing:0;
-	text-align: left;
+  font-family:Lato-Regular;
+  font-size:16px;
+  color:#83868a;
+  letter-spacing:0;
+  text-align:left;
 }
 
 #bottom_margin_4 {
