--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,33 +1,18 @@
 <div class="card sticky">
   <div class="card-header py-2" style="background-color:white">
-    <b>Upcoming Events</b>
+    <span class="card-header-text">Upcoming Events</span>
   </div>
   <div *ngFor="let event of events; let i = index">
-    <ul class="list-group list-group-flush" *ngIf="i < 3">
-      <li class="list-group-item" style="border-bottom:1px solid lightgrey; height: 50px">
+    <ul class="list-group list-group-flush" *ngIf="i < 5">
+      <li class="list-group-item py-2" style="border-bottom:1px solid lightgrey" routerLink="/events/{{event.id}}">
         <div class="d-flex w-100">
-          <img src="assets/img/calendar-icon.svg" class="mr-3" style="height:30px">
-          <div class="d-flex flex-column">
-            <span class="event-title-font">Microsoft Case Competition</span>
-            <span class="event-sub-heading">Peters Building</span>
+          <div class="d-flex flex-column pr-4 pl-2" style="text-align:center">
+            <span class="month">{{event.start_date_time | getMonth}}</span>
+            <span class="date-number">{{event.start_date_time | getDate}}</span>
           </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
-<div class="card mt-3 sticky-updates">
-  <div class="card-header py-2" style="background-color:white">
-    <b>Updates</b>
-  </div>
-  <div *ngFor="let event of events; let i = index">
-    <ul class="list-group list-group-flush" *ngIf="i < 3">
-      <li class="list-group-item" style="border-bottom:1px solid lightgrey; height: 50px">
-        <div class="d-flex w-100">
-          <img src="assets/img/calendar-icon.svg" class="mr-3" style="height:30px">
           <div class="d-flex flex-column">
-            <span class="event-title-font">Microsoft Case Competition</span>
-            <span class="event-sub-heading">Peters Building</span>
+            <span class="event-title-font">{{event.title}}</span>
+            <span class="event-sub-heading">{{clubs[event.club_id].name}}</span>
           </div>
         </div>
       </li>
