--- a/src/app/event-page/event-page.component.html
+++ b/src/app/event-page/event-page.component.html
@@ -9,7 +9,7 @@
           <span class="datetime-location">{{event.location}}</span>
           <br><br>
           <div class="register-button">
-            <span class="register-text" (click)="registerForEvent()">Register</span>
+            <span class="register-text" (click)="registerForEvent()" style="cursor: pointer;">Register</span>
           </div>
         </div>
       </div>
