--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -7,31 +7,29 @@
         	</div>
           <div *ngFor="let club of clubs | mapToIterable">
             <div class="card" (click)="onSelect(club.val)">
-              <div class="row container-fluid py-3 pr-0">
+              <div class="row container-fluid py-0 pr-0">
                 <div class="col-sm-3 col-md-3 col-lg-3">
                     <img class="logo" src="../../assets/img/thumbnails/{{club.val.app_logo}}" alt="Club Logo">
                   </div>
                   <div class="col-sm-8 col-md-8 col-lg-8">
                     <div class="d-flex flex-column align-content-center">
-                      <br>
+                      <br><br>
                       <span class="title">{{club.val.name}}</span>
                       <div class="row container" id="bottom_margin_2">
                         <p class="tags" *ngFor="let tag of club.val.club_tags; let i = index">
-                          <span *ngIf="i > 0">&nbsp; &bull;</span>
+                          <span *ngIf="i > 0">&nbsp; &bull; &nbsp;</span>
                           {{tag.tag}}
                         </p>
                       </div>
                     </div>
-                    <div class="line-clamp-wrapper">
-                      <p class="club-description">{{club.val.description}}</p>
-                    </div>
+                    <!-- <p class="club-description">{{club.val.description}}</p> -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
       	    <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
-      	      	<job-posting-sidebar></job-posting-sidebar>
+      	      	<job-posting-sidebar [clubId]="0"></job-posting-sidebar>
       	    </div>
 
         </div>
