--- a/src/app/sidebar/job-posting-sidebar.html
+++ b/src/app/sidebar/job-posting-sidebar.html
@@ -1,7 +1,7 @@
 <div class="card sticky">
   <h3 class="card-header card-header-text">Open Positions</h3>
-  <ul class="list-group list-group-flush" *ngFor="let posting of jobPostings; let i = index">
-    <li class="list-group-item d-flex flex-row" *ngIf="i < 3" (click)="viewJobPost(posting.id)">
+  <ul class="list-group list-group-flush" *ngFor="let posting of jobPostings; let i = index" style="cursor: pointer;">
+    <li class="list-group-item d-flex flex-row" *ngIf="i < 3 && (posting.club_id === clubId || clubId ===0)" (click)="viewJobPost(posting.id)">
       <img src="assets/img/thumbnails/{{clubs[posting.club_id].app_logo}}" class="open-positions-icon mr-4">
       <div class="d-flex flex-column">
         <h2 style="font-family:Lato-Bold; font-size:16px;">{{posting.title}}</h2>
