--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -17,8 +17,8 @@
               <input type="checkbox" class="form-check-input" [(ngModel)]="updateObj.is_bean">
               Would you like to sign up for LazBeans?
             </label>
-            <input type="file" #fileInput (change)='fileChangeEvents($event)'/>
-            <button type="button" class="btn btn-primary" (click)="upload()">Upload</button>
+            <!-- <input type="file" #fileInput (change)='fileChangeEvents($event)'/>
+            <button type="button" class="btn btn-primary" (click)="upload()">Upload</button> -->
           </div>
         </div>
       </div>
@@ -27,16 +27,18 @@
       <div class="card mt-2" *ngFor="let exp of updateObj.work_experiences_attributes; let i = index">
         <div class="card-block">
           <div class="form-group">
+            <label for="firstname">Company</label>
+            <input type="text" class="form-control mb-3" id="firstname" [(ngModel)]="exp.company">
             <label for="firstname">Title</label>
-            <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="exp.title">
+            <input type="text" class="form-control mb-3" id="firstname" [(ngModel)]="exp.title">
             <div class="d-flex flex-row align-content-end">
               <div class="d-flex flex-column mr-auto" style="width:48%">
                 <label for="firstname">Start Date</label>
-                <input type="email" class="form-control mb-3" id="firstname" placeholder="mm/dd/yyyy" [(ngModel)]="exp.started_date">
+                <input type="text" class="form-control mb-3" id="firstname" placeholder="mm/dd/yyyy" [(ngModel)]="exp.started_date">
               </div>
               <div class="d-flex flex-column" style="width:48%">
                 <label for="firstname">End Date</label>
-                <input type="email" class="form-control mb-3" id="firstname" placeholder="mm/dd/yyyy" [(ngModel)]="exp.end_date">
+                <input type="text" class="form-control mb-3" id="firstname" placeholder="mm/dd/yyyy" [(ngModel)]="exp.end_date">
               </div>
             </div>
 
