--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -22,14 +22,14 @@
                         </p>
                       </div>
                     </div>
-                    <!-- <p class="club-description">{{club.val.description}}</p> -->
+                    <p class="club-description">{{club.val.description}}</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
       	    <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
-      	      	<job-posting-sidebar [clubId]="0"></job-posting-sidebar>
+      	      	<job-posting-sidebar [clubID]="0"></job-posting-sidebar>
       	    </div>
 
         </div>
