--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -34,10 +34,10 @@
             <!-- <div class="card-block">
 
             </div> -->
-						<div class="list-group">
-							<button class="list-group-item list-group-item-action py-2" (click)="state = 'about'" [ngClass]="{active: state == 'about'}">About</button>
-							<button class="list-group-item list-group-item-action py-2" (click)="state = 'events'" [ngClass]="{active: state == 'events'}">Events</button>
-						</div>
+						<ul class="list-group">
+							<li class="list-group-item list-group-item-action py-2" (click)="state = 'about'" [ngClass]="{active: state == 'about'}">About</li>
+							<li class="list-group-item list-group-item-action py-2" (click)="state = 'events'" [ngClass]="{active: state == 'events'}">Events</li>
+						</ul>
           </div>
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4" style="padding-left:0">
-      <job-posting-sidebar [clubId]="club.id"></job-posting-sidebar>
+      <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
     </div>
   </div>
 </div>
