--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -23,7 +23,7 @@
         <a class="nav-link" routerLinkActive="active" href="http://www.shop.lazsoc.ca">SHOP</a>
       </li>
       <li class="nav-item mr-4" *ngIf="!(authService.userSignedIn$ | async)">
-        <a class="nav-link" data-toggle="modal" data-target="#exampleModalLong">LOGIN</a>
+        <a class="nav-link" data-toggle="modal" data-target="#myModal">LOGIN</a>
       </li>
       <li class="nav-item dropdown" *ngIf="(authService.userSignedIn$ | async)">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,7 +42,7 @@
 </nav>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -52,7 +52,33 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-login></app-login>
+        <div *ngIf="state == 'login'">
+          <div class="form">
+            <form class="register-form">
+              <input type="text" placeholder="name"/>
+              <input type="password" placeholder="password"/>
+              <input type="text" placeholder="email address"/>
+              <button>create</button>
+              <p class="message">Already Richard? <a href="#">Sign In</a></p>
+            </form>
+            <form class="login-form">
+              <input type="text" placeholder="email" [(ngModel)]="loginObj.email" name="email"/>
+              <input type="password" placeholder="password" [(ngModel)]="loginObj.password" name="password"/>
+              <button (click)="signIn()">login</button>
+              <p class="message">Not Richard? <a (click)="state = 'REGISTER'">Create an account</a></p>
+            </form>
+          </div>
+        </div>
+        <div class="" *ngIf="state === 'REGISTER'">
+            <div class="form">
+              <form class="login-form">
+                <input type="email" placeholder="Email" name="email" [(ngModel)]="registerObj.email"/>
+                <input type="password" placeholder="Password" name="password" [(ngModel)]="registerObj.password"/>
+                <input type="password" placeholder="Confirm Password" name="passwordConfirmation" [(ngModel)]="registerObj.passwordConfirmation"/>
+                <button (click)="registerUser()">Create Account</button>
+              </form>
+            </div>
+        </div>
       </div>
     </div>
   </div>
