--- a/src/app/newsfeed-container/newsfeed-container.component.html
+++ b/src/app/newsfeed-container/newsfeed-container.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4 px-2">
-      <!-- <profile-sidebar></profile-sidebar> -->
+      <profile-sidebar></profile-sidebar>
     </div>
     <div class="col-sm-5 col-md-5 col-lg-5 mt-4 px-2">
       <app-newsfeed [clubID]="0"></app-newsfeed>
