--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -164,7 +164,6 @@ h5 {
 .card-header{
   font-family:Lato-Bold;
   font-size:1.1em;
-  background-color: white;
 }
 .list-group-item{
   width:100%;
@@ -177,7 +176,23 @@ h5 {
   color:rgba(66,44,137,1);
 }
 
-.icon {
-  height:18px;
-  margin-right:10px;
+.bookmark {
+  height:26px;
+  display:block;
+  position:absolute;
+  transform:translate(32em);
+}
+.card-header-text {
+  font-family:Lato-Black;
+  font-size:16px;
+  color:#83868a;
+  letter-spacing:0;
+  text-align:left;
+}
+.club-detail-text {
+  font-family:Lato-Medium;
+  font-size:13px;
+  color:#83868a;
+  letter-spacing:0;
+  text-align:left;
 }
