--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -38,7 +38,7 @@
 
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <job-posting-sidebar></job-posting-sidebar>
+      <job-posting-sidebar [clubID]="0"></job-posting-sidebar>
     </div>
   </div>
 </div>
