--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -1,20 +1,19 @@
 <div class="card sticky">
-  <img src="https://photos.smugmug.com/Art/Graffiti-Art/i-8h7jctZ/2/ff578e56/M/This%20is%20Paradise%202_Toronto1339-M.jpg" style="height:100px" class="card-image-top">
-  <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="profile-avatar mr-2">
+  <img src="https://coverfiles.alphacoders.com/372/37275.jpg" style="height:100px" class="card-image-top">
+  <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-avatar mr-2">
   <div class="card-header d-flex align-items-center py-2">
     <div class="d-flex flex-column" style="transform:translate(4.5em,0)">
-      <h4 class="profile-name my-0">{{tokenService.currentUserData.email}}</h4>
-      <span class="profile-subheader my-0">Laurier BBA Candidate</span>
+      <h4 class="profile-name my-0">{{tokenService.currentUserData.first_name}} {{tokenService.currentUserData.last_name}}</h4>
+      <span class="profile-subheader my-0">{{tokenService.currentUserData.program}}</span>
     </div>
   </div>
 
-<!--
-  <div class="list-group">
-    <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">Discover</button>
-    <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</button>
-    <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Posts</button>
-    <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
-  </div> -->
+
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-action py-2" style="border-radius:0" routerLink="/update">Update Profile</li>
+    <li class="list-group-item list-group-item-action py-2" style="border-radius:0" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All Events</li>
+    <li class="list-group-item list-group-item-action py-2" style="border-radius:0" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Saved Events</li>
+  </ul>
 </div>
 
 <!-- If user not signed in -->
