--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -166,9 +166,12 @@ h5 {
   background-color: white;
 }
 .list-group-item{
-  width:100%;
-  font-family:Lato-Regular;
-  border-radius: 0;
+  
+  font-family:Lato-Semibold;
+  font-size:14px;
+  color:#000000;
+  letter-spacing:0;
+  text-align:left;
 }
 
 .month {
@@ -192,7 +195,7 @@ h5 {
 }
 .job-posting-subheader {
   font-family:Lato-Medium;
-  font-size:10px;
+  font-size:12px;
   color:#83868a;
   letter-spacing:0;
   text-align:left;
@@ -211,7 +214,7 @@ h5 {
 
 .see-other-postings {
   font-family:Lato-Semibold;
-  font-size:10px;
+  font-size:12px;
   color:#433089;
   letter-spacing:0;
   text-align:left;
