--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,29 +1,33 @@
   <div class="" *ngIf="hasEvents">
-    <div *ngFor="let event of events" style="margin-bottom:1rem">
-      <div class="card" *ngIf="(clubID == 0 || clubID === event.club_id)" (click)="onSelect(event)">
-        <div class="card-img-top">
-          <img class="card-img-top" src="assets/img/{{clubs[event.club_id].app_banner}}" *ngIf="event.banner == ''">
-        </div>
-        <div class="card-block">
-          <div class="d-flex flex-row mb-2">
-            <img src="assets/img/thumbnails/{{clubs[event.club_id].app_logo}}" class="club-avatar mr-3" alt="">
-            <div class="d-flex flex-column">
-              <h4 class="club-title mb-1">{{event.title}}</h4>
-              <h4 class="card-datetime">{{event.start_date_time | getLongDate}}</h4>
+    <div *ngFor="let object of events | mapToIterable" style="margin-bottom:1rem">
+      <div *ngFor="let event of object.val.events">
+        <span class="event-divider">{{object.val.divider}}</span><hr/>
+          <div class="card mt-3" *ngIf="(clubID == 0 || clubID === event.club_id)" (click)="onSelect(event)">
+            <div class="card-img-top">
+              <img class="card-img-top" src="assets/img/{{clubs[event.club_id].app_banner}}" *ngIf="event.banner == ''">
             </div>
-            <img src="assets/img/icons/bookmark.svg" class="bookmark" (click)="saveEvent(event)">
-          </div>
-          <div class="card-text mb-2">
-              {{event.sub_heading}} <br>
+            <div class="card-block">
+              <div class="d-flex flex-row mb-2">
+                <img src="assets/img/thumbnails/{{clubs[event.club_id].app_logo}}" class="club-avatar mr-3" alt="">
+                <div class="d-flex flex-column">
+                  <h4 class="club-title mb-1">{{event.title}}</h4>
+                  <h4 class="card-datetime">{{event.start_date_time | getLongDate}}</h4>
+                </div>
+                <!-- <img src="assets/img/icons/bookmark.svg" class="bookmark" (click)="saveEvent(event)"> -->
+              </div>
+              <div class="card-text mb-2">
+                  {{event.sub_heading}} <br>
+              </div>
+            </div>
+            <!-- <div class="card-footer py-2">
+              <img src="assets/img/icons/heart.svg" class="icon">
+              <img src="assets/img/icons/bookmark.svg" class="icon">
+              <img src="assets/img/icons/arrow.svg" class="icon">
+              <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
+            </div> -->
           </div>
         </div>
-        <!-- <div class="card-footer py-2">
-          <img src="assets/img/icons/heart.svg" class="icon">
-          <img src="assets/img/icons/bookmark.svg" class="icon">
-          <img src="assets/img/icons/arrow.svg" class="icon">
-          <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
-        </div> -->
-      </div>
+
 
     <!-- Laz Latest Section -->
     <!-- <div class="card" *ngIf="event.typeof == 'blog' && (newsfeedState == 'blog' || newsfeedState == 'all')">
