--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,9 +3,9 @@
     <div class="col-sm-8 col-md-8 col-lg-8">
       <div class="card mt-4">
         <div class="card-img-top">
-          <img src="https://s3-us-west-1.amazonaws.com/bgimglibrary/LinkedIn-Background-Image-62.png" class="card-img-top banner-img">
+          <img src="https://coverfiles.alphacoders.com/372/37275.jpg" class="card-img-top banner-img">
         </div>
-        <img src="https://media.giphy.com/media/26gsl2WC5tRxkemdi/giphy.gif" class="profile-img">
+        <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-img">
         <div class="card-block" style="text-align:center">
 
           <br><br><br>
