--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -57,6 +57,7 @@
       </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4" style="padding-left:0">
+			<social-links-sidebar [club]="club"></social-links-sidebar>
       <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
     </div>
   </div>
