--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -166,12 +166,9 @@ h5 {
   background-color: white;
 }
 .list-group-item{
-  
   font-family:Lato-Semibold;
   font-size:14px;
   color:#000000;
-  letter-spacing:0;
-  text-align:left;
 }
 
 .month {
@@ -216,6 +213,13 @@ h5 {
   font-family:Lato-Semibold;
   font-size:12px;
   color:#433089;
-  letter-spacing:0;
-  text-align:left;
+}
+.social-link-title{
+  font-family:Lato-Semibold;
+  font-size:12px;
+}
+.social-link-link {
+  font-family:Lato-Regular;
+  font-size:10px;
+  color:#0083c1;
 }
