Tags appear at top

--- a/src/app/newsfeed-container/newsfeed-container.component.html
+++ b/src/app/newsfeed-container/newsfeed-container.component.html
@@ -4,7 +4,7 @@
       <profile-sidebar></profile-sidebar>
       <div class="card mt-3 sticky-filters">
         <div class="card-header">
-          <span class="card-header-text">Filter</span>
+          <span class="card-header-text">Filter By:</span>
         </div>
         <ul class="list-group">
           <li class="list-group-item py-3"
