--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -199,3 +199,17 @@ h5 {
   color:#83868a;
   letter-spacing:0;
 }
+.filter-tag {
+  background:rgba(67,48,137,0.20);
+  border-radius:100px;
+  width:148px;
+  height:24px;
+  text-align:center;
+}
+.tag-text {
+  font-family:Lato-Semibold;
+  font-size:14px;
+  color:#433089;
+  letter-spacing:0;
+  text-align:left;
+}
