--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-8 col-md-8 col-lg-8">
       <div class="card mt-4">
         <div class="card-img-top">
-          <img src="https://coverfiles.alphacoders.com/372/37275.jpg" class="card-img-top banner-img">
+          <img src="assets/img/cover-photo.jpeg" class="card-img-top banner-img">
         </div>
         <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-img">
         <div class="card-block" style="text-align:center">
