--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -1,5 +1,5 @@
 <div class="card sticky">
-  <img src="https://coverfiles.alphacoders.com/372/37275.jpg" style="height:100px" class="card-image-top">
+  <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top">
   <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-avatar mr-2">
   <div class="card-header d-flex align-items-center py-2">
     <div class="d-flex flex-column" style="transform:translate(4.5em,0)">
